HA/leader-follower/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-database-service
  namespace: oracle-db-amq
  labels:
    app: oracle-db
spec:
  ports:
    - port: 1521
      name: oracle-db
  selector:
    app: oracle-db
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oracle-db
  namespace: oracle-db-amq
  labels:
    app: oracle-db
spec:
  serviceName: oracle-database-service
  replicas: 1
  selector:
    matchLabels:
      app: oracle-db
  template:
    metadata:
      labels:
        app: oracle-db
    spec:
      containers:
      - name: oracle-db
        image: container-registry.oracle.com/database/free:23.3.0.0
        resources:
            limits:
              cpu: 2
              memory: 4Gi
        ports:
        - containerPort: 1521
          name: oracle-db
        volumeMounts:
        - name: oracle-db-persistent-storage
          mountPath: /opt/oracle/oradata
        securityContext:
          runAsUser: 54321
      serviceAccountName: oracle-sa
      volumes:
      - name: oracle-db-persistent-storage
        persistentVolumeClaim:
          claimName: oracle-db-pvc
